react-app/src/components/Navigation/Navigation.css
.profile-dropdown {
  position: absolute;
}

.hidden {
  display: none;
}

.navigation-container {
  position: fixed;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 80px;
  top: 0;
  z-index: 1;
  background-color: white;
  margin-top: 0px;
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
}

.navigation-logo {
  color: #5BC5A7;
  font-size: 2rem;
  font-weight: bold;
  text-decoration: none;
  margin-left: 2rem;
  display: flex;
  align-items: center;
}

.navigation-links {
  display: flex;
  list-style: none;
  margin-right: 2rem;
  padding: 0;
}

.navigation-links li:not(:last-child) {
  margin-right: 1rem;
}

.navigation-links a {
  color: black;
  font-size: 1.2rem;
  text-decoration: none;
}

.navigation-links a:hover {
  color: #5BC5A7;
}

nav ul.profile-dropdown {
  position: absolute;
  top: 80px;
  right: 20px;
  /* background-color: #5BC5A7; */
  border: none;
  border-radius: 4px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
  padding: 10px;
  list-style: none;
  /* z-index: 1000; */
  background-color: white;
}

nav ul.profile-dropdown.hidden {
  display: none;
}

nav ul.profile-dropdown li {
  display: block;
  margin-bottom: 10px;
}

nav ul.profile-dropdown li:last-child {
  margin-bottom: 0;
}

nav ul.profile-dropdown button {
  background-color: #fff;
  color: #5BC5A7;
  border: none;
  cursor: pointer;
  font-size: 14px;
  margin: 0;
  padding: 0;
  text-align: left;
  width: 100%;
  border-radius: 10px;
  height: 40px;
  line-height: 40px;
  margin-bottom: 5px;
  padding: 0 20px;
}

nav ul.profile-dropdown button:hover {
  color: #fff;
  background-color: #5BC5A7;
}
nav ul.profile-dropdown button:active {
  background-color: #5BC5A7;
  box-shadow: 0 2px rgba(0, 0, 0, 0.2) inset;
  transform: translateY(4px);
}

nav ul.profile-dropdown a {
  color: #fff;
  text-decoration: none;
}

nav ul.profile-dropdown a:hover {
  color: #1dd1a1;
}

.profile_menu_button {
  box-sizing: border-box;
  cursor: pointer;
  color: #5BC5A7;
  background-color: transparent;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid #5BC5A7;
  border-radius: 50%;
  margin: 0 5px;
  padding: .5rem;
  text-align: center;
  font-size: 1.25rem;
}

.profile_icon {
  display: block;
  height: 20px;
  width: 20px;
}

.profile_menu_button:hover {
  color: #fff;
  background-color: #5BC5A7;
}

.profile_menu_icon {
  font-size: 1.2rem;
  margin-right: 10px;
}

.dropdown_item {
  padding: 5px 10px;
  font-size: 1.2rem;
  cursor: pointer;
  border-radius: 4px;
}

.dropdown_item:hover {
  background-color: #E6F5F0;
}

.navigation-add-expense-button button {
  background-color: transparent;
  color: #5BC5A7;
  border: none;
  border-radius: 10px;
  font-size: 0.85rem;
  /* font-weight: bold; */
  padding: 0.75rem 1rem; /* increased padding on top and bottom */
  margin-top: 1px;
  margin-left: auto;
  cursor: pointer;
}

.navigation-add-expense-button:hover button{
  background-color: #5BC5A7;
  color: white;
}

.navigation-add-expense-button:active button{
  background-color: #5BC5A7;
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.2);
  transform: translateY(4px);
}


@media screen and (max-width: 81em) {
  /* .navigation-container {
    justify-content: space-between;
  } */

  .navlogodivide{
    display: none;
  }


  /* .navigation-logo {
    margin: 0;
    justify-self: center;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
  } */
  .navigation-logo{
    position: absolute;
    left: 2rem;
  }

}

